--- a/_posts/2026-01-13-Java_Ch12.md
+++ b/_posts/2026-01-13-Java_Ch12.md
@@ -783,3 +783,505 @@ public class JTextAreaEx extends JFrame {
 
 
 ![JTextArea 예제](/assets/images/JTextArea%20예제.PNG)
+
+
+
+
+
+
+## 8. JList`<E>`
+
+
+JList`<E>`를 이용하면<br>
+리스트 형식의 컴포넌트를 만들 수 있다.<br>
+
+`E`는 리스트에 삽입되는 아이템 타입으로,<br>
+리스트를 생성할 때 `E` 대신 아이템 타입을 대입해 구체화해야 한다.<br>
+
+사용자는 리스트에서 하나 이상의 아이템을 선택할 수 있고,<br>
+아이템은 문자열과 이미지 아이콘 등 모든 객체가 가능하다.<br>
+
+JList`<E>`는 자체적으로 스크롤을 지원하지 않으므로,<br>
+스크롤이 가능하려면 JScrollPane에 삽입되어야 한다.<br>
+
+
+### JList`<E>` 생성자
+
+
+리스트의 생성자는 다음과 같다.<br>
+
+
+```java
+JList<E>()	// 빈 리스트
+JList<E>(E[] listData)	// 배열로부터 아이템 공급
+JList<E>(Vector<E> listData)	// Vector로부터 아이템 공급
+```
+
+
+다음은 JList`<E>`를 활용한 예제이다.<br>
+
+
+```java
+public class JListEx extends JFrame {
+
+	private String[] fruits = { "apple", "banana", "kiwi", "mango", "pear", "peach", "berry", "strawberry",
+			"blackberry" };
+
+	private ImageIcon[] images = { new ImageIcon("images/cat.jpg"), new ImageIcon("images/dog.jpg"),
+			new ImageIcon("images/normal.jpg"), new ImageIcon("images/pressed.jpg") };
+
+	public JListEx() {
+		super("JList 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+
+		c.setLayout(new FlowLayout());
+
+		JList<String> strList = new JList<String>(fruits); // 문자열 리스트 생성
+		c.add(strList);
+
+		JList<ImageIcon> imgList = new JList<ImageIcon>(images); // 이미지 리스트 생성
+		// imgList.setListData(images);
+		c.add(imgList);
+
+		JList<String> scrollList = new JList<String>(fruits); // 문자열 리스트 생성
+		c.add(new JScrollPane(scrollList)); // 리스트 스크롤을 가능하도록 생성
+
+		setSize(1500, 1000);
+		setVisible(true);
+	}
+
+	public static void main(String[] args) {
+		new JListEx();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![JList 예제](/assets/images/JList%20예제.PNG)
+
+
+
+
+
+
+## 9. JComboBox`<E>`
+
+
+JComboBox`<E>`는 여러 개의 아이템 중 하나를 선택할 수 있도록<br>
+드롭다운 목록을 제공하는 컴포넌트이다.<br>
+
+`E`는 콤보박스에 저장되는 아이템의 타입을 의미하며,<br>
+JComboBox를 생성할 때 실제 타입으로 구체화한다.<br>
+
+
+### JComboBox`<E>` 생성자
+
+
+콤보박스의 생성자는 다음과 같다.<br>
+
+
+```java
+JComboBox<E>()	// 빈 콤보박스
+JComboBox(E[] items)	// 배열로부터 아이템 공급
+JComboBox(Vector<E> items)	// Vector로부터 아이템 공급
+```
+
+
+다음은 JComboBox`<E>`를 활용한 예제이다.<br>
+
+
+```java
+public class JComboBoxEx extends JFrame {
+	private String[] fruits = { "cat", "dog" };
+	private ImageIcon[] images = { new ImageIcon("images/cat.jpg"), new ImageIcon("images/dog.jpg") };
+	private JLabel imgLabel = new JLabel(images[0]);
+
+	public JComboBoxEx() {
+		super("JComboBox 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+
+		c.setLayout(new FlowLayout());
+
+		JComboBox<String> combo = new JComboBox<String>(fruits); // 콤보박스 생성
+
+		c.add(combo);
+		c.add(imgLabel);
+
+		// 콤보박스에 Action 리스너 등록. 선택된 아이템의 이미지 출력
+		combo.addActionListener(new ActionListener() {
+			public void actionPerformed(ActionEvent e) {
+
+				int index = combo.getSelectedIndex(); // 선택된 아이템의 인덱스 얻기
+
+				imgLabel.setIcon(images[index]); // 인덱스의 이미지를 이미지 레이블에 출력
+			}
+		});
+
+		setSize(350, 300);
+		setVisible(true);
+	}
+
+	public static void main(String[] args) {
+		new JComboBoxEx();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![JComboBox 예제](/assets/images/JComboBox%20예제.PNG)
+
+
+
+
+
+
+## 10. 메뉴
+
+
+메뉴의 구성은 다음과 같다.<br>
+
+
+1. 메뉴아이템 - JMenuItem을 이용하여 생성<br>
+
+2. 메뉴 - 여러 개의 메뉴 아이템을 가짐. JMenu를 이용하여 생성<br>
+
+3. 메뉴바 - 메뉴들을 붙이는 바, 프레임에 부착. JMenuBar를 이용하여 생성<br>
+
+4. 분리선 - 메뉴아이템 사이의 분리선(separator).<br>
+JMenu의 addSeparator() 메소드를 호출하여 삽입<br>
+
+
+### 메뉴 만들기
+
+
+1. 메뉴바를 만든다.<br>
+
+```java
+JMenuBar mb = new JMenuBar();
+```
+
+2. 메뉴를 만들어 메뉴바에 붙인다.<br>
+
+```java
+JMenu screenMenu = new JMenu("Screen");	// Screen 메뉴 생성
+mb.add(screenMenu);	// Screen 메뉴 삽입
+```
+
+3. 메뉴아이템을 생성하여 메뉴에 붙인다.<br>
+
+```java
+screenMenu.add(new JMenuItem("Load"));
+screenMenu.add(new JMenuItem("Hide"));
+screenMenu.add(new JMenuItem("ReShow"));
+screenMenu.addSeparator();	// ReShow 메뉴아이템 다음에 분리선 삽입
+screenMenu.add(new JMenuItem("Exit"));
+```
+
+4. 메뉴바를 프레임에 붙인다.<br>
+
+```java
+frame.setJMenuBar(mb);
+```
+
+
+### 메뉴아이템에 Action 리스너 등록
+
+
+사용자가 메뉴아이템을 선택하면<br>
+Action 이벤트가 발생한다.<br>
+
+다음은 메뉴아이템에 Action 이벤트를 처리하기 위한<br>
+Action 리스너를 등록하는 코드이다.<br>
+
+
+```java
+JMenu screenMenu = new JMenu("Screen");	// 메뉴 생성
+JMenuItem item = new JMenuItem("Load");	// 메뉴 아이템 생성
+item.addActionListener(new MenuActionListener());	// 메뉴 아이템에 Action 리스너 등록
+screenMenu.add(item);	// 메뉴 추가
+
+.......
+
+class MenuActionListener implements ActionListener {
+	public void actionPerformed(ActionEvent e) {
+		// 사용자가 Load 메뉴아이템 선택 시 처리할 작업 구현
+	}
+}
+```
+
+
+다음은 메뉴를 활용한 예제이다.<br>
+
+
+```java
+public class JMenuEx extends JFrame {
+
+	private JLabel imgLabel = new JLabel(); // 빈 이미지 레이블
+
+	public JMenuEx() {
+		super("JMenu 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		JMenuBar mb = new JMenuBar();
+		JMenuItem[] menuItem = new JMenuItem[4];
+		String[] itemTitle = { "Load", "Hide", "ReShow", "Exit" };
+		JMenu screenMenu = new JMenu("Screen");
+
+		MenuActionListener listener = new MenuActionListener(); // Action 리스너 생성
+
+		for (int i = 0; i < menuItem.length; i++) {
+			menuItem[i] = new JMenuItem(itemTitle[i]); // 메뉴아이템 생성
+			menuItem[i].addActionListener(listener); // Action 리스너 등록
+			screenMenu.add(menuItem[i]); // 메뉴아이템 삽입
+		}
+		mb.add(screenMenu);
+		setJMenuBar(mb);
+
+		getContentPane().add(imgLabel, BorderLayout.CENTER);
+
+		setSize(300, 250);
+		setVisible(true);
+	}
+
+	class MenuActionListener implements ActionListener {
+		public void actionPerformed(ActionEvent e) {
+			String cmd = e.getActionCommand(); // 사용자가 선택한 메뉴아이템 문자열 리턴
+
+			switch (cmd) {
+			case "Load":
+				if (imgLabel.getIcon() != null)
+					return;
+				imgLabel.setIcon(new ImageIcon("images/dog.jpg"));
+				break;
+			case "Hide":
+				imgLabel.setVisible(false);
+				break;
+			case "ReShow":
+				imgLabel.setVisible(true);
+				break;
+			case "Exit":
+				System.exit(0);
+				break;
+			}
+		}
+	}
+
+	public static void main(String[] args) {
+		new JMenuEx();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![JMenu 예제](/assets/images/JMenu%20예제.PNG)
+
+
+
+
+
+
+## 11. 팝업 다이얼로그
+
+
+팝업 다이얼로그는 사용자에게 메시지를 전달하거나,<br>
+문자열을 입력받을 수 있는 간단한 팝업 창이다.<br>
+
+팝업 다이얼로그는 JOptionPane 클래스의<br> 
+static 메소드를 이용하여 생성한다.<br>
+
+다음은 많이 사용되는 팝업 다이얼로그들이다.<br>
+
+
+### 입력 다이얼로그 - JOptionPane.showInputDialog()
+
+
+showInputDialog()를 호출하면,<br>
+한 줄의 문자열을 입력받는 다이얼로그를 생성할 수 있다.<br>
+
+
+```java
+public static String showInputDialog(Object message)
+
+* message : 다이얼로그 메시지
+* 리턴 값 : 사용자가 입력한 문자열. 취소 버튼이 선택되거나 창이 닫히면 null 리턴
+```
+
+
+### 확인 다이얼로그 - JOptionPane.showConfirmDialog()
+
+
+showConfirmDialog()를 호출하면,<br>
+사용자로부터 확인을 받기 위한 다이얼로그를 생성할 수 있다.<br>
+
+
+```java
+public static int showConfirmDialog(Component parentComponent, Object message, String title, int optionType)
+
+* parentComponent : 다이얼로그의 부모 컴포넌트. 다이얼로그가 출력되는 영역의 범위를 지정. null 이면 전체 화면 중앙에 출력
+
+* message : 다이얼로그 메시지
+
+* title : 다이얼로그 타이틀
+
+* optionType : 다이얼로그 옵션 종류 지정
+JOptionPane.YES_NO_OPTION, JOptionPane.YES_NO_CANCEL_OPTION, JOptionPane.OK_CANCEL_OPTION.
+
+*  리턴 값 : 사용자가 선택한 옵션 종류
+JOptionPane.YES_OPTION, JOptionPane.NO_OPTION, JOptionPane.CANCEL_OPTION, JOptionPane.OK_OPTION, JOptionPane.CLOSED_OPTION.
+```
+
+
+### 메시지 다이얼로그 - JOptionPane.showMessageDialog()
+
+
+showMessageDialog()를 호출하면,<br>
+사용자에게 문자열 메시지를 전달하기 위한<br>
+메시지 다이얼로그를 생성할 수 있다.<br>
+
+
+```java
+public static void showMessageDialog(Component parentComponent, Object message, String title, int messageType)
+
+* parentComponent : 다이얼로그의 부모 컴포넌트. 다이얼로그가 출력되는 영역 범위를 지정. null 이면 전체 화면 중앙에 출력
+
+* message : 다이얼로그 메시지
+
+* title : 다이얼로그 타이틀
+
+* messageType : 다이얼로그의 종류로서 다음 중 하나
+JOptionPane.ERROR_MESSAGE, JOptionPane.INFORMATION_MESSAGE, JOptionPane.WARNING_MESSAGE, JOptionPane.QUESTION_MESSAGE, JOptionPane.PLAIN_MESSAGE.
+```
+
+
+다음은 팝업 다이얼로그를 활용한 예제이다.<br>
+
+
+```java
+public class DialogEx extends JFrame {
+
+	public DialogEx() {
+		super("Dialog 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+
+		setSize(500, 300);
+		c.add(new MyPanel(), BorderLayout.NORTH);
+		setVisible(true);
+	}
+
+	class MyPanel extends JPanel {
+		private JButton inputBtn = new JButton("Input Name");
+		private JTextField tf = new JTextField(10);
+		private JButton confirmBtn = new JButton("Confirm");
+		private JButton messageBtn = new JButton("Message");
+
+		public MyPanel() {
+			setBackground(Color.CYAN);
+			add(inputBtn);
+			add(confirmBtn);
+			add(messageBtn);
+			add(tf);
+
+			// input 버튼 리스너
+			inputBtn.addActionListener(new ActionListener() {
+				// 입력 다이얼로그 생성
+				// DialogEx.this 로 프레임의 중앙에 출력
+				public void actionPerformed(ActionEvent e) {
+					String name = JOptionPane.showInputDialog(DialogEx.this, "이름을 입력하세요.");
+
+					if (name != null) {
+						tf.setText(name); // 사용자가 입력한 문자열을 텍스트필드에 출력
+					}
+				}
+			});
+
+			// confirm 버튼 리스너
+			confirmBtn.addActionListener(new ActionListener() {
+				public void actionPerformed(ActionEvent e) {
+					// 확인 다이얼로그 생성
+					// DialogEx.this 로 프레임의 중앙에 출력
+					int result = JOptionPane.showConfirmDialog(DialogEx.this, "계속 하겠습니까?", "Confirm",
+							JOptionPane.YES_NO_OPTION);
+
+					// 사용자가 선택한 버튼에 따라 문자열을 텍스트필드에 출력
+					if (result == JOptionPane.CLOSED_OPTION) {
+						tf.setText("Closed");
+					} else if (result == JOptionPane.YES_OPTION) {
+						tf.setText("Yes");
+					} else {
+						tf.setText("No");
+					}
+				}
+			});
+
+			// message 버튼 리스너
+			messageBtn.addActionListener(new ActionListener() {
+				public void actionPerformed(ActionEvent e) {
+					// 메시지 다이얼로그 생성
+					// DialogEx.this 로 프레임의 중앙에 출력
+					JOptionPane.showMessageDialog(DialogEx.this, "조심하세요.", "경고", JOptionPane.ERROR_MESSAGE);
+					tf.setText("조심하세요");
+				}
+			});
+		}
+
+	}
+
+	public static void main(String[] args) {
+		new DialogEx();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+* 초기 화면<br>
+
+![팝업 다이얼로그 예제(초기 화면)](/assets/images/팝업%20다이얼로그%20예제(초기%20화면).PNG)
+
+
+* 입력 다이얼로그<br>
+
+![팝업 다이얼로그 예제(입력 다이얼로그)](/assets/images/팝업%20다이얼로그%20예제(입력%20다이얼로그).PNG)
+
+
+* 확인 다이얼로그<br>
+
+![팝업 다이얼로그 예제(확인 다이얼로그)](/assets/images/팝업%20다이얼로그%20예제(확인%20다이얼로그).PNG)
+
+
+* 메시지 다이얼로그<br>
+
+![팝업 다이얼로그 예제(메시지 다이얼로그)](/assets/images/팝업%20다이얼로그%20예제(메시지%20다이얼로그).PNG)
+
+
+참고로 팝업 다이얼로그는<br>
+한 번 화면에 출력되면,<br>
+닫기 전까지는 다른 창을 클릭하거나 조작할 수 없다.<br>
+이런 타입을 모달(modal) 타입이라고 한다.<br>
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 스윙 컴포넌트 활용에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 그래픽에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
