--- a/_posts/2026-01-26-Java_Ch13.md
+++ b/_posts/2026-01-26-Java_Ch13.md
@@ -284,3 +284,165 @@ public class ColorFontEx extends JFrame {
 
 
 ### Graphics의 기능 - 도형 그리기
+
+
+Graphics를 이용하여 다양한 도형을 그릴 수 있다.<br>
+
+도형을 그리는 Graphics의 주요 메소드는 다음과 같다.<br>
+
+
+```java
+void drawLine(int x1, int y1, int x2, int y2)
+// (x1, y1) 에서 (x2, y2) 까지 선을 그림.
+
+void drawOval(int x, int y, int w, int h)
+// (x, y)를 왼쪽 위 모서리로 하는 너비 w, 높이 h인 사각형에 내접하는 타원을 그림. w나 h가 0 이하일 경우 아무 것도 그려지지 않음.
+
+void drawRect(int x, int y, int w, int h)
+// (x, y)를 왼쪽 위로 하는 너비 w, 높이 h인 사각형을 그림.
+
+void drawRoundRect(int x, int y, int w, int h, int arcWidth, int arcHeight)
+// (x, y)를 왼쪽 위로 하는 사각형을 그리되, 네 모서리가 arcWidth, arcHeight 크기의 타원으로 둥글게 처리됨. arcWidth/arcHeight가 클수록 모서리가 더 둥글게 처리됨.
+
+* arcWidth : 모서리 타원의 수평 지름
+
+* arcHeight : 모서리 타원의 수직 지름
+
+void drawArc(int x, int y, int w, int h, int startAngle, int arcAngle)
+// (x, y)를 왼쪽 위로 하는 w x h 크기의 사각형에 내접하는 원호를 그림. 3시 방향이 0도 기점. startAngle 지점에서 arcAngle 각도만큼 원호를 그림. arcAngle 이 양수이면 반시계 방향, 음수이면 시계 방향으로 그림.
+
+* startAngle : 원호의 시작 각도
+
+* arcAngle : 원호 각도
+
+void drawPolygon(int []x, int []y, int n)
+// x, y 배열에 저장된 점들 중 n개를 순서대로 연결하며, 마지막 점과 첫 번째 점을 자동으로 연결하여 폐다각형을 그림.
+```
+
+
+다음은 위 메소드들을 이용하여 도형들을 그리는 예제이다.<br>
+
+
+```java
+public class GraphicsDrawEx extends JFrame {
+
+	public GraphicsDrawEx() {
+		setTitle("GraphicsDraw 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		setContentPane(new MyPanel());
+
+		setSize(400, 450);
+		setVisible(true);
+	}
+
+	class MyPanel extends JPanel {
+		@Override
+		public void paintComponent(Graphics g) {
+			super.paintComponent(g);
+
+			g.setColor(Color.RED);
+
+			g.drawLine(20, 20, 100, 100); // (20, 20) 에서 (100, 100) 을 잇는 선 그리기
+
+			g.drawOval(120, 20, 80, 80); // (120, 20) 에서 80x80 원 그리기
+
+			g.drawRect(220, 20, 80, 80); // (220, 20) 에서 80x80 사각형 그리기
+
+			g.drawRoundRect(20, 120, 120, 80, 40, 60); // (20, 120) 에서 120x80 크기의 사각형을 그리되, 각 모서리를 40x60 크기의 타원으로 둥글게 처리
+
+			g.drawArc(220, 120, 80, 80, 90, 270); // (220, 120) 에서 80x80 사각형에 내접하는 원호를 그리되, 시작 각도는 90도, 원호의 각도는 270도
+
+			int[] x = { 180, 140, 180, 220 };
+			int[] y = { 240, 320, 400, 320 };
+
+			g.drawPolygon(x, y, 4); // x, y 각 배열 원소를 점으로 순차적으로 잇는 폐다각형 그리기
+		}
+	}
+
+	public static void main(String[] args) {
+		new GraphicsDrawEx();
+	}
+}
+```
+
+
+![GraphicsDraw 예제](/assets/images/GraphicsDraw%20예제.PNG)
+
+
+참고로 Graphics의 도형 그리기는 기본적으로 1픽셀 두께로만 그려지며,<br>
+선의 두께를 직접 지정할 수 없다.<br>
+외곽선의 두께를 다양하게 표현하고자 할 경우에는<br>
+크기를 달리하여 여러 번 도형을 겹쳐 그리거나,<br>
+Graphics 2D를 사용해야 한다.<br>
+
+
+### Graphics의 기능 - 도형 칠하기
+
+
+도형 채우기란 도형의 외곽선과 내부를 동일한 색으로 채우는 기능이다.<br>
+
+만약 외곽선과 내부를 다른 색으로 표현하고 싶다면,<br>
+
+1. 먼저 도형 내부를 채운 뒤<br>
+
+2. 다시 외곽선을 그려야 한다.<br>
+
+도형을 칠하는 메소드는 다음과 같다.<br>
+
+
+```java
+void fillXXX()	// XXX는 도형의 이름
+```
+
+
+다음은 도형 칠하기 메소드를 이용한 예제이다.<br>
+
+
+```java
+public class GraphicsFillEx extends JFrame {
+
+	public GraphicsFillEx() {
+		setTitle("GraphicsFill 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		setContentPane(new MyPanel());
+
+		setSize(400, 450);
+		setVisible(true);
+	}
+
+	class MyPanel extends JPanel {
+		@Override
+		public void paintComponent(Graphics g) {
+			super.paintComponent(g);
+
+			g.setColor(Color.RED);
+			g.fillOval(120, 20, 80, 80); // (120, 20) 에서 80x80 원 칠하기
+
+			g.setColor(Color.BLUE);
+			g.fillRect(220, 20, 80, 80); // (220, 20) 에서 80x80 사각형 칠하기
+
+			g.setColor(Color.GREEN);
+			g.fillRoundRect(20, 120, 120, 80, 40, 60); // (20, 120) 에서 120x80 크기의 사각형을 칠하되, 각 모서리를 40x60 크기의 타원으로 둥글게 처리
+
+			g.setColor(Color.PINK);
+			g.fillArc(220, 120, 80, 80, 90, 270); // (220, 120) 에서 80x80 사각형에 내접하는 원호를 칠하되, 시작 각도는 90도, 원호의 각도는 270도
+
+			int[] x = { 180, 140, 180, 220 };
+			int[] y = { 240, 320, 400, 320 };
+
+			g.setColor(Color.CYAN);
+			g.fillPolygon(x, y, 4); // x, y 각 배열 원소를 점으로 순차적으로 잇는 폐다각형 칠하기
+		}
+	}
+
+	public static void main(String[] args) {
+		new GraphicsFillEx();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![GraphicsFill 예제](/assets/images/GraphicsFill%20예제.PNG)
