--- a/_posts/2026-01-26-Java_Ch13.md
+++ b/_posts/2026-01-26-Java_Ch13.md
@@ -446,3 +446,334 @@ public class GraphicsFillEx extends JFrame {
 
 
 ![GraphicsFill 예제](/assets/images/GraphicsFill%20예제.PNG)
+
+
+### Graphics의 기능 - 이미지 그리기
+
+
+스윙에서 이미지는 다음 2가지 방법으로 그릴 수 있다.<br>
+
+1. JLabel을 이용한 이미지 그리기<br>
+
+2. Graphics의 drawImage()를 이용한 이미지 그리기<br>
+
+
+첫 번째 방법은 JLabel 컴포넌트를 이용하는 것으로,<br>
+전 글에서 이미 해본 방법이다.<br>
+
+
+```java
+ImageIcon image = new ImageIcon("images/dog.jpg");	// 이미지 로딩
+
+JLabel label = new JLabel(image);	// 이미지 레이블 만들기
+
+panel.add(label);	// 이미지 레이블을 패널에 삽입.
+```
+
+
+이 방법은 이미지의 크기 조절이 어렵다는 단점이 있다.<br>
+
+
+두 번째 방법은 Graphics의 drawImage() 메소드를 이용하는데,<br>
+이 메소드를 이용하면 원하는 위치에, 원하는 크기, 비율로<br>
+이미지를 그리는 것이 가능하다.<br>
+
+하지만 이 방법은 이미지를 그리는 코드를 직접 작성해야 한다.<br>
+
+다음은 원본 크기로 이미지를 그리는 메소드와,<br>
+이미지 크기를 조절하여 그리는 메소드이다.<br>
+
+
+```java
+boolean drawImage(Image img, int x, int y, Color bgColor, ImageObserver observer)
+
+boolean drawImage(Image img, int x, int y, ImageObserver observer)
+
+* img : 이미지 객체
+
+* x, y : 이미지가 그려질 좌표
+
+* bgColor : 이미지가 투명한 부분을 가지고 있을 때, 이미지의 투명한 영역을 채울 배경색
+
+* observer : 이미지 로딩 상태 변화를 통보받는 객체
+
+// img 를 그래픽 영역의 (x, y) 위치에 원본 크기로 그림.
+```
+
+
+```java
+boolean drawImage(Image img, int x, int y, int width, int height, Color bgColor, ImageObserver observer)
+
+boolean drawImage(Image img, int x, int y, int width, int height, ImageObserver observer)
+
+* width : 그려지는 폭으로서 픽셀 단위
+
+* height : 그려지는 높이로서 픽셀 단위
+
+// img 를 그래픽 영역의 (x, y) 위치에 width x height 크기로 그림.
+```
+
+
+다음은 원본 크기로 이미지를 그리는 예제이다.<br>
+
+
+```java
+public class GraphicsDrawImageEx1 extends JFrame {
+
+	public GraphicsDrawImageEx1() {
+		setTitle("GraphicsDrawImage 예제1");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		setContentPane(new MyPanel());
+
+		setSize(400, 300);
+		setVisible(true);
+	}
+
+	class MyPanel extends JPanel {
+		private ImageIcon icon = new ImageIcon("images/dog.jpg"); // 이미지 로딩
+		private Image img = icon.getImage(); // 이미지 객체
+
+		@Override
+		public void paintComponent(Graphics g) {
+			super.paintComponent(g);
+
+			g.drawImage(img, 20, 20, this); // 이미지를 패널의 (20, 20) 에 원래 크기로 그림
+		}
+	}
+
+	public static void main(String[] args) {
+		new GraphicsDrawImageEx1();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![GraphicsDrawImage 예제1](/assets/images/GraphicsDrawImage%20예제1.PNG)
+
+
+다음은 JPanel 크기에 맞춰 이미지를 그리는 예제이다.<br>
+
+
+```java
+public class GraphicsDrawImageEx2 extends JFrame {
+
+	public GraphicsDrawImageEx2() {
+		setTitle("GraphicsDrawImage 예제2");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		setContentPane(new MyPanel());
+
+		setSize(400, 300);
+		setVisible(true);
+	}
+
+	class MyPanel extends JPanel {
+		private ImageIcon icon = new ImageIcon("images/dog.jpg"); // 이미지 로딩
+		private Image img = icon.getImage(); // 이미지 객체
+
+		@Override
+		public void paintComponent(Graphics g) {
+			super.paintComponent(g);
+
+			g.drawImage(img, 0, 0, getWidth(), getHeight(), this);
+			// 이미지를 패널 크기로 조절하여 그림
+			// getWidth(), getHeight() -> 패널의 폭과 높이
+			// 마지막 인자는 이미지 로딩 상태를 통보받는 객체 지정 (this 이므로 JPanel이 처리)
+			// 이미지 로딩 상태 통보가 필요 없으면 null 로 지정
+		}
+	}
+
+	public static void main(String[] args) {
+		new GraphicsDrawImageEx2();
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![GraphicsDrawImage 예제2](/assets/images/GraphicsDrawImage%20예제2.PNG)
+
+
+이 예제에서는 마우스로 프레임의 크기를 변경하면<br>
+MyPanel의 paintComponent()가 다시 호출되고,<br>
+drawImage()가 변경된 패널 크기에 맞추어 이미지를 다시 그린다.<br>
+
+
+
+
+
+
+## 3. repaint()와 그래픽 응용
+
+
+### repaint()는 그림을 그리는 메서드가 아니다
+
+repaint()는 화면에 직접 그림을 그리지 않는다.<br>
+이 메서드는 “이 컴포넌트를 다시 그려야 한다”는 요청만을 Swing에게 전달한다.<br>
+
+실제 그림을 그리는 작업은 항상<br>
+paintComponent(Graphics g) 메소드에서 이루어진다.<br>
+
+즉, 화면 갱신의 흐름은 다음과 같다.<br>
+
+
+```java
+repaint() 호출
+ → paint() 호출
+   → paintComponent() 호출
+```
+
+개발자가 paintComponent()를 직접 호출해서는 안 된다.<br>
+
+
+### repaint()는 자동으로 호출되는 경우가 많다
+
+다음과 같은 상황에서는 repaint()를 직접 호출하지 않아도<br>
+Swing이 자동으로 다시 그리기를 수행한다.<br>
+
+1. 프레임이나 패널의 크기를 변경할 때<br>
+
+2. 창이 다른 창에 가려졌다가 다시 나타날 때<br>
+
+3. 컴포넌트가 이동하거나 겹칠 때<br>
+
+4. 컴포넌트가 처음 화면에 표시될 때<br>
+
+이 때문에 프레임 크기를 마우스로 변경하면<br>
+paintComponent()가 자동으로 다시 호출되어<br>
+현재 크기에 맞게 그림이 다시 그려진다.<br>
+
+
+### 상태가 바뀌면 반드시 repaint()를 호출해야 한다
+
+좌표, 색상, 이미지, 크기 등<br>
+화면에 그려지는 내용에 영향을 주는 값이 변경되었을 경우에는<br>
+반드시 repaint()를 호출해야 한다.<br>
+
+값만 변경하고 repaint()를 호출하지 않으면<br>
+화면은 이전 상태 그대로 유지된다.<br>
+
+
+### paintComponent() 안에서 repaint()를 호출하면 안 된다
+
+paintComponent() 내부에서 repaint()를 호출하면<br>
+다시 paintComponent()가 호출되는 무한 반복이 발생할 수 있다.<br>
+
+이는 CPU 사용량 증가와 프로그램 멈춤의 원인이 되므로<br>
+절대로 사용해서는 안 된다.<br>
+
+
+다음은 repaint()를 이용한 예제이다.<br>
+
+
+```java
+public class GraphicsRepaintEx extends JFrame {
+
+	public GraphicsRepaintEx() {
+		setTitle("GraphicsRepaint 예제");
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+		setContentPane(new MyPanel());
+
+		setSize(300, 300);
+		setVisible(true);
+	}
+
+	class MyPanel extends JPanel {
+
+		private Vector<Point> vStart = new Vector<Point>();
+		private Vector<Point> vEnd = new Vector<Point>();
+
+		public MyPanel() {
+
+			// Mouse 리스너 등록
+			// 마우스 버튼이 눌려지면 시작점을 vStart 벡터에 저장
+			// 마우스 버튼이 놓여지면 끝점을 vEnd 벡터에 저장
+
+			addMouseListener(new MouseAdapter() { // MouseListener 구현 대신 MouseAdapter 상속 → 필요한 메소드만 구현
+				@Override
+				public void mousePressed(MouseEvent e) {
+
+					Point startP = e.getPoint(); // 마우스가 눌린 위치 좌표 가져오기
+
+					vStart.add(startP); // 시작점 벡터에 저장
+				}
+
+				@Override
+				public void mouseReleased(MouseEvent e) {
+
+					Point endP = e.getPoint(); // 마우스가 놓인 위치 좌표 가져오기
+
+					vEnd.add(endP); // 끝점 벡터에 저장
+
+					repaint(); // 패널 다시 그리기 요청 → paintComponent 호출
+				}
+			});
+		}
+
+		@Override
+		public void paintComponent(Graphics g) {
+			super.paintComponent(g);
+
+			g.setColor(Color.BLUE);
+
+			// 벡터에 저장된 모든 선을 순차적으로 그림
+			for (int i = 0; i < vStart.size(); i++) {
+
+				Point s = vStart.elementAt(i); // 벡터에 들어있는 시작점 알아내기
+
+				Point e = vEnd.elementAt(i); // 벡터에 들어있는 끝점 알아내기
+
+				g.drawLine((int) s.getX(), (int) s.getY(), (int) e.getX(), (int) e.getY()); // 시작점에서 끝점까지 선 그리기
+			}
+		}
+	}
+
+	public static void main(String[] args) {
+		new GraphicsRepaintEx();
+	}
+}
+```
+
+
+이 예제에서는 마우스를 눌러 드래그하면 선이 그려지고,<br> 
+각 선의 시작점과 끝점 좌표가 벡터에 저장된다.<br>
+
+새로운 선이 추가될 때마다 repaint()를 호출하여 화면을 다시 그리며,<br> 
+벡터에 저장된 모든 선을 순차적으로 그린다.<br>
+
+결과적으로 이전에 그린 선들도 화면에 그대로 남아 있는 것처럼 보여,<br> 
+사용자는 계속해서 선이 쌓이는 것처럼 느껴진다.<br>
+
+동작 순서를 정리하면 다음과 같다.<br>
+
+
+1. 마우스 누름 (mousePressed) → 현재 마우스 위치를 시작점 벡터(vStart)에 저장<br>
+
+2. 마우스 놓음 (mouseReleased) → 현재 마우스 위치를 끝점 벡터(vEnd)에 저장<br>
+
+3. repaint() 호출 → Swing이 화면 갱신 요청<br>
+
+4. paintComponent() 호출 → 화면 초기화 후 벡터를 순회하면서 모든 선을 다시 그림<br>
+
+5. 사용자 관점 → 이전에 그린 선도 포함되어 계속 선이 쌓이는 것처럼 보임<br>
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![GraphicsRepaintEx 예제](/assets/images/GraphicsRepaint%20예제.PNG)
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 그래픽에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 스레드 기초에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
