--- a/_posts/2026-02-01-Java_Ch14.md
+++ b/_posts/2026-02-01-Java_Ch14.md
@@ -627,10 +627,10 @@ class WorkerThread extends Thread {
 실행 순서를 조절할 때 사용하는 방법이다.<br>
 
 * wait()
-→ 현재 스레드를 멈추고 기다리게 한다<br>
+-> 현재 스레드를 멈추고 기다리게 한다<br>
 
 * notify()
-→ 기다리고 있는 스레드 중 하나를 깨운다<br>
+-> 기다리고 있는 스레드 중 하나를 깨운다<br>
 
 이 메소드들은<br>
 반드시 synchronized 안에서만 사용해야 한다.<br>
@@ -660,11 +660,11 @@ wait()을 호출해 잠시 멈춘다
 
 2. 버퍼가 비어 있음
 
-3. 재생 스레드 → wait() (대기)
+3. 재생 스레드 -> wait() (대기)
 
 4. 입력 스레드가 데이터 입력
 
-5. 입력 스레드 → notify() 호출
+5. 입력 스레드 -> notify() 호출
 
 6. 재생 스레드가 깨어나 다시 재생 시작
 
@@ -673,5 +673,320 @@ wait()을 호출해 잠시 멈춘다
 
 
 ```java
+class MyLabel extends JLabel {
 
+	private int barSize = 0; // 바의 크기
+	private int maxBarSize;
+
+	public MyLabel(int maxBarSize) {
+		this.maxBarSize = maxBarSize;
+	}
+
+	@Override
+	public void paintComponent(Graphics g) {
+		super.paintComponent(g);
+		g.setColor(Color.MAGENTA);
+
+		int width = (int) (((double) (getWidth())) / maxBarSize * barSize);
+
+		if (width == 0) {
+			return; // 크기가 0 이기 때문에 바를 그릴 필요 없음
+		}
+
+		g.fillRect(0, 0, width, this.getHeight()); // width 만큼 MAGENTA 색으로 칠함
+	}
+
+	synchronized void fill() {
+		while (barSize == maxBarSize) {
+			try {
+				wait(); // barSize가 줄어들어 조건이 만족될 때까지 대기
+			} catch (InterruptedException e) {
+				return;
+			}
+		}
+		barSize++;
+		repaint();
+		notify(); // wait 중인 스레드 하나를 깨움
+	}
+
+	synchronized void consume() {
+		while (barSize == 0) {
+			try {
+				wait(); // 바의 크기가 0 이면 바의 크기가 0 보다 커질 때까지 대기
+			} catch (InterruptedException e) {
+				return;
+			}
+		}
+		barSize--;
+		repaint(); // 바 다시 그리기
+		notify(); // wait 중인 스레드 하나를 깨움
+	}
+}
+
+class ConsumerThread extends Thread {
+
+	private MyLabel bar;
+
+	public ConsumerThread(MyLabel bar) {
+		this.bar = bar;
+	}
+
+	@Override
+	public void run() {
+		while (true) {
+			try {
+				sleep(100); // 0.1 초 잠을 잠
+				bar.consume(); // 0.1 초마다 바를 1씩 줄임
+			} catch (InterruptedException e) {
+				return;
+			}
+		}
+	}
+}
+
+public class TabAndThreadEx extends JFrame {
+
+	private MyLabel bar = new MyLabel(100); // 바의 최대 크기를 100으로 설정
+
+	public TabAndThreadEx(String title) {
+		super(title);
+		setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+
+		Container c = getContentPane();
+		c.setLayout(null);
+
+		bar.setBackground(Color.ORANGE);
+		bar.setOpaque(true);
+		bar.setLocation(20, 50);
+		bar.setSize(300, 20);
+
+		c.add(bar);
+
+		// 컨텐트팬에 키 이벤트 리스너 등록
+		c.addKeyListener(new KeyAdapter() {
+			public void keyPressed(KeyEvent e) {
+				bar.fill(); // 키를 누를 때마다 바가 1씩 증가
+			}
+		});
+
+		setSize(350, 200);
+		setVisible(true);
+
+		c.setFocusable(true);
+		c.requestFocus(); // 컨텐트팬이 포커스를 받을 수 있도록 설정
+		ConsumerThread th = new ConsumerThread(bar); // 스레드 생성
+
+		th.start(); // 스레드 시작
+	}
+
+	public static void main(String[] args) {
+		new TabAndThreadEx("아무 키나 빨리 눌러 바를 채우기");
+	}
+}
 ```
+
+
+위 프로그램은 사용자가 아무 키를 빠르게 누를 때마다 바가 채워지고,<br>
+키를 누르지 않으면 바가 감소하도록 구현되어 있다.<br>
+이 프로그램의 동작 과정은 다음과 같다.<br>
+
+
+[프로그램 시작]
+
+
+```java
+public static void main(String[] args) {
+    new TabAndThreadEx("아무 키나 빨리 눌러 바를 채우기");
+}
+```
+
+
+[프레임 & 바 초기화]
+
+
+```java
+private MyLabel bar = new MyLabel(100);
+```
+
+* barSize = 0
+
+* maxBarSize = 100
+
+* 바는 비어 있는 상태로 시작
+
+
+```java
+bar.setOpaque(true);
+bar.setSize(300, 20);
+```
+
+
+* 바의 외형 설정
+
+* 아직 색칠되는 부분 없음 (barSize == 0)
+
+
+[키 이벤트 준비]
+
+
+```java
+c.addKeyListener(new KeyAdapter() {
+    public void keyPressed(KeyEvent e) {
+        bar.fill();
+    }
+});
+```
+
+
+* 아무 키나 누르면 fill() 호출
+
+
+```java
+c.setFocusable(true);
+c.requestFocus();
+```
+
+
+* 컨텐트팬이 키 입력을 받을 수 있게 준비
+
+
+[소비자 스레드 시작]
+
+
+```java
+ConsumerThread th = new ConsumerThread(bar);
+th.start();
+```
+
+
+* 새로운 스레드 생성 -> ConsumerThread
+
+
+[ConsumerThread 동작 흐름]
+
+
+```java
+while (true) {
+    sleep(100);
+    bar.consume();
+}
+```
+
+
+반복 동작<br>
+
+* 0.1초 대기
+
+* consume() 호출
+
+* 바를 1만큼 줄이려고 시도
+
+
+[처음 consume() 호출]
+
+
+```java
+synchronized void consume() {
+    while (barSize == 0) {
+        wait();
+    }
+    barSize--;
+}
+```
+
+
+* barSize == 0
+
+* while 조건 참
+
+* ConsumerThread -> wait()
+
+* MyLabel 객체의 락을 풀고 대기 상태
+
+* 이제 ConsumerThread는 멈춤
+
+
+[사용자 키 입력 발생]
+
+
+```java
+keyPressed -> bar.fill();
+```
+
+
+* 사용자가 키 누름
+
+
+[fill() 내부 동작]
+
+
+```java
+while (barSize == maxBarSize) { wait(); }
+barSize++;
+repaint();
+notify();
+```
+
+
+* barSize != maxBarSize
+
+* barSize++ -> 0 -> 1
+
+* repaint() -> 다시 그리기 요청
+
+* notify() -> 대기 중인 스레드 하나 깨움
+
+* ConsumerThread가 깨어날 준비
+
+
+[ConsumerThread 깨어남]
+
+
+* wait()에서 깨어남
+
+* while (barSize == 0) 재검사 -> X
+
+* barSize-- -> 1 -> 0
+
+* repaint() 호출
+
+* notify() 실행
+
+* 바가 다시 줄어듦
+
+
+[이후 반복 구조]
+
+
+사용자가 빠르게 키를 누르면<br>
+
+* fill()이 연속 실행
+
+* barSize 증가
+
+* 바가 채워짐
+
+키 입력이 없으면<br>
+
+* ConsumerThread가 0.1초마다 감소
+
+* 결국 다시 barSize == 0
+
+* wait() 상태로 진입
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![wait()-notify() 예제](/assets/images/wait()-notify()%20예제.PNG)
+
+
+-----------------------------------------------------------------------<br>
+
+
+지금까지 자바의 스레드 기초에 대해 공부해 보았다.<br>
+다음 글에서는 자바의 입출력에 대해서 공부해 보겠다.<br>
+
+
+---
+※ 본 글은 개인 학습을 목적으로 「명품 자바 에센셜」(황기태 지음, 생능출판)을 참고하여 작성하였습니다.
