--- a/_posts/2026-02-04-Java_Ch15.md
+++ b/_posts/2026-02-04-Java_Ch15.md
@@ -63,19 +63,19 @@ sidebar:
 문자 입력 스트림으로 읽을 경우,<br> 
 응용 프로그램에는 의도하지 않은 문자로 전달될 수 있다.<br>
 
-바이트 스트림은 바이트 단위로 데이터를 처리하는 스트림으로,<br>  
-스트림을 통해 들어오고 나가는 정보를<br>  
-문자 해석 없이 순수한 이진 데이터로 다룬다.<br>  
-따라서 문자 데이터뿐만 아니라<br>  
+바이트 스트림은 바이트 단위로 데이터를 처리하는 스트림으로,  
+스트림을 통해 들어오고 나가는 정보를<br>
+문자 해석 없이 순수한 이진 데이터로 다룬다.<br>
+따라서 문자 데이터뿐만 아니라<br>
 이미지, 오디오, 파일 등 모든 데이터를 처리할 수 있다.<br>
 
-자바 플랫폼은 문자 스트림과 바이트 스트림을 이용한<br>  
-입출력을 지원하기 위해 다양한 클래스들을 제공하며,<br>  
+자바 플랫폼은 문자 스트림과 바이트 스트림을 이용한<br>
+입출력을 지원하기 위해 다양한 클래스들을 제공하며,<br>
 이들은 모두 java.io 패키지에 포함되어 있다.<br>
 
-문자 스트림을 다루는 클래스는<br>  
-이름 뒤에 Reader 또는 Writer를 붙여 구분하며,<br>  
-바이트 스트림을 다루는 클래스는<br>  
+문자 스트림을 다루는 클래스는<br>
+이름 뒤에 Reader 또는 Writer를 붙여 구분하며,<br>
+바이트 스트림을 다루는 클래스는<br>
 InputStream 또는 OutputStream 계열로 구분한다.<br>
 
 
