--- a/_posts/2026-02-04-Java_Ch15.md
+++ b/_posts/2026-02-04-Java_Ch15.md
@@ -126,12 +126,12 @@ while(true) {
 ## 2. 문자 스트림과 텍스트 파일 입출력
 
 
-문자 스트림은 문자를 단위로 다루는 스트림으로,<br>
-문자가 아닌 바이너리 값들은 제대로 처리하지 못한다.<br>
+문자 스트림은 문자(character)를 단위로 다루는 스트림으로,<br>
+바이너리 데이터를 그대로 처리하는 데에는 적합하지 않다.<br>
 
-텍스트 파일은 문자로만 구성된 파일로서,<br>
+텍스트 파일은 문자로 구성된 파일이며,<br>
 텍스트 파일을 읽고 쓰기 위해서는<br>
-문자 입출력 시스템을 사용해야 한다.<br>
+문자 스트림 기반의 입출력 시스템을 사용해야 한다.<br>
 
 
 ### [텍스트 파일 읽기]
@@ -139,9 +139,10 @@ while(true) {
 
 * 파일 입력 스트림 생성(파일 열기)
 
-우선 파일을 읽기 위해<br> 
-파일 입력 스트림을 생성하고<br>
-파일과 연결한다.<br>
+
+파일을 읽기 위해서는 먼저<br>
+파일 입력 스트림 객체를 생성하여<br>
+파일과 연결해야 한다.<br>
 
 
 ```java
@@ -149,17 +150,72 @@ FileReader fin = new FileReader("c:\\test.txt");
 ```
 
 
-FileReader의 생성자는 스트림 객체를 생성한 후,<br>
-파일을 찾아 열고, 스트림과 연결한다.<br>
+FileReader의 생성자는<br>
+스트림 객체를 생성한 후,<br>
+지정된 파일을 찾아 열고 스트림과 연결한다.<br>
 
 
 * 파일 읽기
 
 
+fin.read()는 파일로부터 문자 하나를 읽어 int 타입으로 반환하며,<br>
+파일의 끝(EOF)에 도달하면 -1을 반환한다.<br>
+
+다음은 read()를 이용하여<br>
+파일 전체를 읽어 화면에 출력하는 코드이다.<br>
+
+
 ```java
 int c;
 
-while((c == fin.read())! = -1) {    // 문자 하나를 c 에 읽어 들임. 파일 끝까지 반복
-    System.out.print((char)c);  // 문자 c 를 화면에 출력
+while ((c = fin.read()) != -1) {   // 문자 하나를 c에 읽어 들임. 파일 끝까지 반복
+    System.out.print((char) c);    // 읽은 문자를 화면에 출력
 }
+```
+
+
+파일의 크기가 큰 경우,<br>
+한 번에 한 문자씩 읽으면 성능이 떨어질 수 있으므로,<br>
+다음과 같이 배열을 이용해 여러 문자를<br> 
+한 번에 읽는 방식을 사용할 수 있다.<br>
+
+
+```java
+char [] buf = new char [1024];
+
+int n = fin.read(buf);  // 최대 1024개의 문자를 읽고, 실제 읽은 문자 수를 n에 반환
+```
+
+
+참고로 read()의 반환 타입이 char가 아닌 int인 이유는<br>
+파일의 끝(EOF)을 나타내는 값 -1을 함께 표현하기 위해서이다.<br>
+
+* 문자를 읽은 경우
+-> 반환값은 0 ~ 65535 범위의 유니코드 값
+
+* 파일의 끝에 도달한 경우
+-> 반환값은 -1
+
+즉, char로는 표현할 수 없는 -1 값을 반환해야 하므로,<br>
+반환 타입이 int로 정의되어 있다.<br>
+
+이 때문에 실제 문자를 사용할 때는<br>
+다음과 같이 char 타입으로 형변환하여 사용한다.
+
+
+```java
+(char) c
+```
+
+
+* 스트림 닫기
+
+
+스트림이 더 이상 필요 없게 된 경우 스트림을 닫아야 한다.<br>
+스트림을 닫으면 사용 중이던 시스템 자원이 해제된다.<br>
+닫힌 스트림으로부터는 더 이상 읽거나 쓸 수 없다.<br>
+
+
+```java
+fin.close();
 ```
