--- a/_posts/2026-02-04-Java_Ch15.md
+++ b/_posts/2026-02-04-Java_Ch15.md
@@ -219,3 +219,261 @@ int n = fin.read(buf);  // 최대 1024개의 문자를 읽고, 실제 읽은 문
 ```java
 fin.close();
 ```
+
+
+다음은 FileReader의 생성자들이다.<br>
+
+
+```java
+FileReader(File file)   // file 에 지정된 파일로부터 읽는 FileReader 생성
+FileReader(String name)   // name 이름의 파일로부터 읽는 FileReader 생성
+```
+
+
+다음은 FileReader의 주요 메소드들이다.<br>
+
+
+```java
+int read()  // 한 개의 문자를 읽어 정수형(char 값)으로 반환한다. 더 이상 읽을 문자가 없으면 -1을 반환한다.
+
+int read(char[] cbuf)   // 최대 cbuf.length개의 문자를 읽어 배열에 저장한다.실제로 읽은 문자 수를 반환하며, 스트림의 끝(EOF)에 도달하여 더 이상 읽을 수 없으면 -1을 반환한다.
+
+int read(char[] cbuf, int off, int len)   // 최대 len개의 문자를 읽어 cbuf 배열의 off 위치부터 저장한다. 실제로 읽은 문자 수를 반환하며, 스트림의 끝에 도달하면 -1을 반환한다.
+
+String getEncoding()  // 이 스트림이 사용하는 문자 인코딩 이름을 반환한다.인코딩을 알 수 없는 경우 null을 반환할 수 있다.
+
+void close()  // 입력 스트림을 닫고 관련된 시스템 자원을 해제한다. 닫힌 이후에는 스트림을 사용할 수 없다.
+```
+
+
+### [파일 입출력과 예외 처리]
+
+
+다음과 같은 경우, 파일 입출력 실행 중 예외가 발생할 수 있다.<br>
+
+1. 파일의 경로명이 다르거나, 어떤 상황으로 인해 파일을 열 수 없는 경우
+
+이 경우 FileReader 생성자는<br> 
+`FileNotFoundException` 예외를 발생시킨다.<br>
+
+
+2. 파일을 읽거나 쓰거나 닫는 동안 디스크의 오작동, 파일 손상 등으로 인해 입출력 오류가 발생하는 경우
+
+
+이 경우 read(), write(), close() 메소드는<br>
+`IOException` 예외를 발생시킨다.<br>
+
+
+그러므로 파일 입출력 코드는<br>
+IOException 및 FileNotFoundException에 대한<br>
+예외 처리가 필요하다.<br>
+
+이 예외 처리는 try-catch 문으로 처리하거나,<br>
+메소드 선언부에 throws로 위임할 수 있다.<br>
+
+또한 try-with-resources 문을 사용하면<br>
+스트림을 자동으로 닫으면서 예외를 처리할 수 있다.<br>
+
+
+* try-catch로 직접 처리하는 경우
+
+
+```java
+try {
+    FileReader fr = new FileReader("test.txt");
+    int ch = fr.read();
+    fr.close(); // close() 직접 호출
+} catch (IOException e) {
+    e.printStackTrace();  // 발생한 예외의 자세한 정보(에러 추적 경로)를 콘솔에 출력하는 메소드
+}
+```
+
+
+* throws로 예외를 호출한 쪽으로 위임하는 경우
+
+
+```java
+public static void readFile() throws IOException {
+    FileReader fr = new FileReader("test.txt");
+    int ch = fr.read();
+    fr.close();
+}
+```
+
+
+* try-with-resources 사용 (자동 close)
+
+
+```java
+try (FileReader fr = new FileReader("test.txt")) {
+    int ch = fr.read();
+} catch (IOException e) {
+    e.printStackTrace();
+}   // close() 자동 실행
+```
+
+
+다음은 FileReader로 텍스트 파일을 읽는 예제이다.<br>
+
+
+```java
+public class FileReaderEx {
+	public static void main(String[] args) {
+		FileReader fr = null;
+
+		try {
+			fr = new FileReader("C:\\Users\\User\\Desktop\\javatxt.txt"); // 문자 입력 스트림 생성
+
+			int c;
+
+			while ((c = fr.read()) != -1) { // 한 문자씩 파일 끝까지 읽기
+				System.out.print((char) c);
+			}
+			fr.close();
+		} catch (IOException e) {
+			System.out.println("입출력 오류");
+		}
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![FileReader 예제](/assets/images/FileReader%20예제.PNG)
+
+
+### [텍스트 파일 쓰기]
+
+
+FileWriter는 파일에 데이터를 쓰기 위한 문자 기반 출력 스트림이다.<br>
+
+
+* 파일 출력 스트림 생성
+
+
+다음 코드는 c:\Temp\test.txt 파일에<br>
+텍스트를 쓰는 출력 스트림을 생성한다.<br>
+
+
+```java
+FileWriter fout = new FileWriter("c:\\Temp\\test.txt");
+```
+
+
+FileWriter 생성자는 스트림 객체 생성 후,<br>
+파일을 열어 스트림과 연결한다.<br>
+
+파일이 없는 경우 빈 파일을 생성하고,<br>
+이미 파일이 있는 경우 기본적으로 파일 내용을 지우고<br>
+파일의 처음부터 쓰기가 진행된다.<br>
+
+
+* 파일 쓰기
+
+
+다음 코드는 문자 하나를 파일에 쓴다.<br>
+
+
+```java
+fout.write('A');
+```
+
+
+배열을 만들어 한 번에 한 블록씩 쓰는 것도 가능하다.<br>
+
+
+```java
+char [] buf = new char [1024];
+
+fout.write(buf, 0, buf.length);   // buf[0] 부터 buf 크기만큼 쓰기
+```
+
+
+* 스트림 닫기
+
+
+쓰기를 완료했다면 close()를 호출하여 스트림을 닫는다.<br>
+스트림을 닫으면 연결된 파일도 닫힌다.<br>
+
+
+```java
+fout.close();
+```
+
+
+다음은 FileWriter의 생성자들이다.<br>
+
+
+```java
+FileWriter(File file)  // file 에 데이터를 저장할 FileWriter 생성
+
+FileWriter(String name)   // name 파일에 데이터를 저장할 FileWriter 생성
+
+FileWriter(File file, boolean append)   // FileWriter 를 생성하며, append가 true이면 파일 끝에 이어쓰기
+
+FileWriter(String name, boolean append)   // FileWriter 를 생성하며, append가 true이면 파일 끝에 이어쓰기
+```
+
+
+다음은 FileWriter의 주요 메소드들이다.<br>
+
+
+```java
+void write(int c)   // c 를 char 로 변환하여 한 개의 문자 출력
+
+void write(String str)   // 문자열 str 출력
+
+void write(String str, int off, int len)  // 인덱스 off 부터 len 개의 문자를 str 문자열에서 출력
+
+void write(char [] cbuf, int off, int len)  // 인덱스 off 부터 len 개의 문자를 배열 cbuf 에서 출력
+
+void flush()  // 스트림에 남아 있는 데이터를 모두 출력
+
+String getEncoding()  // 스트림이 사용하는 문자 집합의 이름 리턴
+
+void close()  // 출력 스트림을 닫고 관련 시스템 자원 해제
+```
+
+
+다음은 FileWriter를 이용하여 텍스트 파일을 쓰는 예제이다.<br>
+
+
+```java
+public class FileWriterEx {
+	public static void main(String[] args) {
+		InputStreamReader in = new InputStreamReader(System.in); // 키보드로부터 읽는 문자 입력 스트림 생성
+
+		FileWriter fw = null;
+
+		int c;
+
+		try {
+			fw = new FileWriter("C:\\Users\\User\\Desktop\\javatxt.txt");
+
+			while ((c = in.read()) != -1) { // ctrl - z 키(EOF) 가 입력될 때까지 반복
+				fw.write(c);
+			}
+			in.close();
+			fw.close();
+		} catch (IOException e) {
+			System.out.println("입출력 오류");
+		}
+
+	}
+}
+```
+
+
+실행 결과는 다음과 같다.<br>
+
+
+![FileWriter 예제](/assets/images/FileWriter%20예제.PNG)
+
+
+
+
+
+
+## 3. 바이트 스트림과 바이너리 파일 입출력
