--- a/_posts/2026-02-07-Java_Ch16.md
+++ b/_posts/2026-02-07-Java_Ch16.md
@@ -14,3 +14,175 @@ related: true
 sidebar:
   nav: "categories_sidebar"
 ---
+
+
+# 자바 소켓 프로그래밍
+
+
+자바의 소켓 프로그래밍을 공부하기 위해서는<br>
+먼저 TCP/IP를 가볍게 알고 넘어가야 할 필요가 있다.<br>
+
+
+
+
+
+
+## 1. TCP/IP 기초
+
+
+TCP/IP는 Transmission Control Protocol/Internet Protocol의 약자로,<br>
+서로 다른 컴퓨터가 네트워크를 통해<br>
+데이터를 주고받기 위한 통신 규약들의 집합이다.<br>
+
+TCP는 어떻게 안전하게 보낼지(전송 방식),<br>
+IP는 어디로 보낼지(주소)를 담당한다.<br>
+
+자바 소켓은 TCP/IP 프로토콜 중<br>
+주로 TCP 위에서 작동한다.<br>
+
+
+---
+
+
+### [TCP]
+
+
+자바 소켓에서 기본으로 사용하는 통신 방식은 TCP이다.<br>
+
+TCP는 다음과 같은 특징들을 가지고 있다.<br>
+
+
+1. 연결 지향
+-> 통신 전에 먼저 연결을 맺는다.<br>
+
+
+2. 신뢰성 보장
+-> 데이터가 순서대로 손실 없이, 중복 없이 전달된다.<br>
+
+3. 스트림 기반
+-> 데이터를 연속된 바이트 흐름으로 처리한다.<br>
+
+
+그렇기 때문에 자바에선<br>
+InputStream/OutputStream으로 데이터를 주고 받는다.<br>
+
+
+---
+
+
+### [IP]
+
+
+IP 주소는 네트워크 상의 컴퓨터를 식별하는 고유 번호이다.<br>
+예를 들어 192.168.0.10 와 같은 숫자의 조합이 IP주소이다.<br>
+
+IP 주소만으로는<br>
+해당 컴퓨터에서 어떤 프로그램과 통신해야 하는지 알 수 없기 때문에,<br>
+포트 번호가 필요하다.<br>
+
+
+---
+
+
+### [포트 번호]
+
+
+포트(port)는 한 컴퓨터 안에서 실행중인 프로그램을 구분하는 번호이다.<br>
+범위는 0에서 65535로,<br>
+통신 대상은 IP + 포트 번호로 정확히 결정된다.<br>
+
+
+---
+
+
+### [TCP 연결 과정]
+
+
+TCP의 연결 과정을 정리하자면 다음과 같다.<br>
+
+
+1. 서버가 특정 포트에서 대기
+
+2. 클라이언트의 연결 요청
+
+3. 연결 성립
+
+4. 데이터 송수신
+
+5. 연결 종료
+
+
+
+
+
+
+
+
+## 2. 소켓 프로그래밍
+
+
+### [소켓(socket)]
+
+
+소켓 통신은 개발자가 TCP/IP 프로토콜을 이용하여<br>
+네트워크 통신 프로그램을 쉽게 작성할 수 있도록<br>
+지원하는 기술이다.<br>
+
+소켓(socket)은 두 응용프로그램 간의<br>
+통신 연결 끝점(endpoint)으로,<br>
+TCP/IP 기반 통신에서 데이터를 송수신하기 위한<br>
+추상화된 통신 인터페이스이다.<br>
+
+응용프로그램은 직접 상대방과 통신하지 않고,<br>
+자신의 소켓을 통해 데이터를 보내거나<br>
+소켓으로부터 데이터를 입력받는다.<br>
+
+소켓은 IP 주소와 포트 번호의 조합으로 식별되며,<br>
+이를 통해 통신할 상대방의 응용프로그램이 결정된다.<br>
+
+자바의 Socket 클래스는<br>
+TCP 프로토콜의 신뢰성 있는 데이터 전송 기능을 이용하여,<br>
+데이터가 순서대로 손실 없이 전달되도록 한다.<br>
+
+
+---
+
+
+### [소켓과 서버 클라이언트 통신]
+
+
+소켓 통신에서는 응용프로그램이<br>
+서버와 클라이언트의 역할로 구분된다.<br>
+일반적으로 정보를 제공하는 쪽이 서버이고,<br>
+이를 요청하여 이용하는 쪽이 클라이언트이다.<br>
+
+서버는 특정 포트에서 클라이언트의 접속 요청을 기다리며,<br>
+클라이언트가 서버에 접속하면 통신이 시작된다.<br>
+
+
+---
+
+
+### [서버 소켓과 클라이언트 소켓]
+
+
+자바에서는 서버 소켓과<br>
+클라이언트 소켓을 사용하여<br>
+서버-클라이언트 통신을 구현한다.<br>
+
+서버 소켓은 클라이언트의 연결 요청을 수락하는 역할을 하며,<br>
+연결이 성립되면 통신을 담당할 클라이언트 소켓을 생성한다.<br>
+
+클라이언트는 클라이언트 소켓을 이용해 서버에 접속하고,<br>
+실제 데이터 송수신은 이 클라이언트 소켓을 통해 이루어진다.<br>
+
+즉, 서버 소켓은 연결을 기다리고,<br>
+클라이언트 소켓은 데이터 통신을 담당한다.<br>
+(서버 측에서 생성된 소켓과 클라이언트 측에서 생성된 소켓은<br>
+서로 다른 객체이지만, 하나의 연결로 서로 통신한다.)<br>
+
+
+---
+
+
+### [서버 클라이언트 통신 프로그램 구성]
